[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/battlescape/save_load_ui.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.1, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.3, 1)

[node name="SaveLoadUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 400.0
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 50.0
offset_right = 540.0
offset_bottom = 350.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 30.0
text = "Save/Load Game"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16

[node name="SaveSlotsContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 40.0
offset_right = 400.0
offset_bottom = 250.0

[node name="Slot1" type="HBoxContainer" parent="Panel/SaveSlotsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SlotLabel" type="Label" parent="Panel/SaveSlotsContainer/Slot1"]
layout_mode = 2
size_flags_horizontal = 3
text = "Slot 1:"
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="DescriptionLabel" type="Label" parent="Panel/SaveSlotsContainer/Slot1"]
layout_mode = 2
size_flags_horizontal = 3
text = "Empty"
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)

[node name="SaveButton" type="Button" parent="Panel/SaveSlotsContainer/Slot1"]
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button" parent="Panel/SaveSlotsContainer/Slot1"]
layout_mode = 2
text = "Load"

[node name="DeleteButton" type="Button" parent="Panel/SaveSlotsContainer/Slot1"]
layout_mode = 2
text = "Delete"

[node name="Slot2" type="HBoxContainer" parent="Panel/SaveSlotsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SlotLabel" type="Label" parent="Panel/SaveSlotsContainer/Slot2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Slot 2:"
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="DescriptionLabel" type="Label" parent="Panel/SaveSlotsContainer/Slot2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Empty"
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)

[node name="SaveButton" type="Button" parent="Panel/SaveSlotsContainer/Slot2"]
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button" parent="Panel/SaveSlotsContainer/Slot2"]
layout_mode = 2
text = "Load"

[node name="DeleteButton" type="Button" parent="Panel/SaveSlotsContainer/Slot2"]
layout_mode = 2
text = "Delete"

[node name="Slot3" type="HBoxContainer" parent="Panel/SaveSlotsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SlotLabel" type="Label" parent="Panel/SaveSlotsContainer/Slot3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Slot 3:"
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="DescriptionLabel" type="Label" parent="Panel/SaveSlotsContainer/Slot3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Empty"
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)

[node name="SaveButton" type="Button" parent="Panel/SaveSlotsContainer/Slot3"]
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button" parent="Panel/SaveSlotsContainer/Slot3"]
layout_mode = 2
text = "Load"

[node name="DeleteButton" type="Button" parent="Panel/SaveSlotsContainer/Slot3"]
layout_mode = 2
text = "Delete"

[node name="QuickSaveButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 260.0
offset_right = 100.0
offset_bottom = 290.0
text = "Quick Save"

[node name="QuickLoadButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 110.0
offset_top = 260.0
offset_right = 190.0
offset_bottom = 290.0
text = "Quick Load"

[node name="AutoSaveButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 200.0
offset_top = 260.0
offset_right = 280.0
offset_bottom = 290.0
text = "Auto Save"

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 380.0
offset_top = 10.0
offset_right = 400.0
offset_bottom = 30.0
text = "X"
